--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
       <h2 class="shout shrink">Пригождается и в жизни</h2>
     </section>
     <section id="" class="slide label-header rbn bg11">
-      <img src="pictures/stories-sad.jpeg" class="cover h bordered"/>
+      <img src="pictures/stories-sad.jpg" class="cover h bordered"/>
     </section>
     <section id="" class="slide label-header rbn bg bg13">
       <h2>Как я пишу текст</h2>
